// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-blHHSb jiUzPe"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-blHHSb sc-gtLWhw jiUzPe cefszN"
  >
    Label
  </button>
</div>
`;
